--- a/styles.css
+++ b/styles.css
@@ -3,147 +3,247 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-header{
-    padding: 16px 0;
-    background-color: #182c61;
-    color: #ecf0f1;
+/*body*/
+.background{
+    background-image: url("/images/back-ground.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 
-header h1,
-section h2,
-section h3,
-form button{
-    font-weight: normal;
+body{
+    font-family: "Glory", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 430;
+    font-style: normal;
+    margin: 0;
+    
+    
 }
+/*header*/
+header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-position: center top;
+        padding: 1px 0; 
+        height: 46px; 
+    }
 
-body, 
-input,
-textarea{
-    font-family: "Roboto", sans-serif;
-}
 header,
-section h2,
-section h3, 
-form button{
-        font-family: "Bungee", sans-serif; 
+section h2{
+        font-family: "Teko", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 700;
+        font-style: bold;  
 }
 
+h3{
+    color: #b38300;
+}
+
+/*nav*/
+
+nav {
+    width: 100%;
+    text-align: center;
+
+}
+
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px; /* Espaçamento entre os itens da navbar */
+}
 header nav li {
     display: inline;
     margin-left: 16px;
     font-size: 18px;
-}
-
-header nav li a {
-    color: #ecf0f1;
-    text-decoration: none;
-}
-
-.container {
-    max-width: 1280px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-header .container,
-section .container{
-    display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
-.brands-list img {
-    height: 24px;
-}
 
-.brands-list li{
-    display: inline;
-    margin-right: 8px;
-}
-
-section .container{
-    align-items: flex-start;
-}
-
-section{
-    padding: 24px 0;
-}
-
-section h2{
-    margin-bottom: 16px;
- 
-}
-
-section {
-    color: #182c61;
-}
-
-section p{
-    margin-bottom: 8px;
-}
-
-.store-font{
-    margin-right: 32px;
-}
-
-.social-links img{
-    height: 24px;
-}
-
-.social-links li{
-    display: inline;
-    margin-right: 8px;
-}
-
-.social-links li a{
+nav ul li a {
     text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px 15px;
+    display: block;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-#contact .container{
-    display: block;
-}
-
-.contact-methods{
-    display: flex;
-    justify-content: space-between;
-}
-form input,
-form textarea,
-form button {
-    display: block;
-    width: 328px;
-    margin-bottom: 8px;
+nav ul li a:hover{
+    background-color: #ffffff;
+    color:#000000;
     padding: 8px;
 }
 
-form textarea {
-    resize: none;
-    height: 140px;
+
+.container{
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 50px; 
+    background: #000;
+    color: #fff;
+    z-index: 9999;
+    border-bottom: 2px solid #444;
 }
 
-section h3{
-    margin-bottom: 16px;
+p{
+    font-family: "Glory", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    color: #ffffff;
+    size-adjust: 45px;
 }
 
-form button{
-    background-color: #182c61;
-    color: #ecf0f1;
-    border: none;
-    cursor: pointer;
+.pic{
+    width: 35%;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border:1.5px solid #eeeeee;
+}
+#history{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-form button:hover{
-    background-color:#3753a0 ;
-}
-
-input:focus,
-textarea:focus {
-    outline-color:#182c61 ;
+.articles h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #000000;
 }
 
 footer{
-    background-color: #182c61;
-    color: #ecf0f1;
-    padding: 16px 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
+    opacity: 35%;
+}
+
+
+.characters{
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.character{
+    width: 250px;
+    height: 150px;
+    margin-right: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border:1.5px solid #eeeeee;
+}
+
+
+.lore{
+    width: 30%;
+    display:inline-block;
+    text-align: center;
+    padding: 20px;
+    
+}
+
+.articles{
+    display: inline-flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #e4b529;
+    font-family: "Teko", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+article{
+    display: flex;
+    margin: 5px;
+}
+
+.mapas{
+    display: inline-block;
+    text-align: center;
+}
+
+.mapas img{
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border:1.5px solid #eeeeee;
+    width: 650px;
+    height: 500px;
+    margin: 20px;
+}
+
+#paisagens img{
+    width:220px;
+    height: 120px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border:1.5px solid #eeeeee;
+    margin: 10px;
+}
+#paisagens{
+    justify-content: space-around;
+    display: flex;
+}
+
+#teste{
+    background-color: #5f160fe0;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1.5px solid rgba(255, 255, 255, 0.822);
+    height: 300px;
+}
+
+.contact-bar {
+    padding: 10px 0;
+    text-align: center;
+    justify-content: space-between;
+    background-color: #333333c7;
+
+}
+
+.contact-link {
+    color: white;
+    text-decoration: none;
+    margin: 0px 50px;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+.imgContacts{
+    height: 45px;
 }
